# kernel-pump

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TESTSET.md  script  script_print_dir_files  script_remove_files  tutorial.md
codes/src/: general.cpp  general.h  heuristic_solution.cpp  heuristic_solution.h  main.cpp  main2.cpp  problem.cpp  problem.h  timer.h
include/kernelpump/: cpxmodel.h  feaspump.h  fp_interface.h  kernelpump.h  mipmodel.h  pdlpmodel.h  scipmodel.h  solution.h  version.h.in  xprsmodel.h
instances/: all_problems_benchmark.txt  all_problems_collection.txt  binary_problems_benchmark.txt  binary_problems_collection.txt  binary_problems_collection_minus_benchmark.txt  error_problems.txt  evellyn.txt  integer_problems_benchmark.txt  integer_problems_collection.txt  integer_problems_collection_minus_benchmark-rest.txt  integer_problems_collection_minus_benchmark.txt  pilot_problems.txt  r-stop-dp.txt  remaining_problems.txt  single_problem.txt  travel-tour-problem-cb.txt  travel-tour-problem-circ.txt  travel-tour-problem-circ18.txt  travel-tour-problem-circ20.txt  travel-tour-problem.txt
results/: CMakeLists.txt  bestKnownBounds.csv
results/src/: csv_reader.hpp  main.cpp
results/tables/latex/: benchmark.csv  performance_matrix.txt  performance_profile.txt  r-stop-dp.csv  table_algorithms.csv  table_algorithms.txt  table_algorithms_all.csv  table_algorithms_binary.csv  table_algorithms_integer.csv  table_convergence.txt  table_performance.txt  traveling-tour.csv
settings/: settings_error.txt  settings_list.txt  settings_list_obj.txt
settings/all/: config1.cfg  config10.cfg  config11.cfg  config12cfg  config13.cfg  config14.cfg  config15.cfg  config16.cfg  config17.cfg  config18.cfg  config19.cfg  config2.cfg  config20.cfg  config21.cfg  config22.cfg  config23.cfg  config24.cfg  config25.cfg  config3.cfg  config4.cfg  config5.cfg  config6.cfg  config7.cfg  config8.cfg  config9.cfg
solutions/miplib/: s_config16_30n20b8_1.sol  s_config16_30n20b8_2.sol  s_config16_30n20b8_3.sol  s_config16_50v-10_1.sol  s_config16_50v-10_2.sol  s_config16_50v-10_3.sol  s_config16_CMS750_4_1.sol  s_config16_CMS750_4_2.sol  s_config16_CMS750_4_3.sol  s_config16_academictimetablesmall_1.sol  s_config16_academictimetablesmall_2.sol  s_config16_academictimetablesmall_3.sol  s_config16_air05_1.sol  s_config16_air05_2.sol  s_config16_air05_3.sol  s_config16_app1-1_1.sol  s_config16_app1-1_2.sol  s_config16_app1-1_3.sol  s_config16_app1-2_1.sol  s_config16_app1-2_2.sol  s_config16_app1-2_3.sol  s_config16_assign1-5-8_1.sol  s_config16_assign1-5-8_2.sol  s_config16_assign1-5-8_3.sol  s_config16_atlanta-ip_1.sol  s_config16_atlanta-ip_2.sol  s_config16_atlanta-ip_3.sol  s_config16_b1c1s1_1.sol  s_config16_b1c1s1_2.sol  s_config16_b1c1s1_3.sol  (+5159 more)
solutions/miplib-new/: s_config16_30n20b8_1.sol  s_config16_30n20b8_2.sol  s_config16_30n20b8_3.sol  s_config16_30n20b8_4.sol  s_config16_30n20b8_5.sol  s_config16_50v-10_1.sol  s_config16_50v-10_2.sol  s_config16_50v-10_3.sol  s_config16_50v-10_4.sol  s_config16_50v-10_5.sol  s_config16_CMS750_4_1.sol  s_config16_CMS750_4_2.sol  s_config16_CMS750_4_3.sol  s_config16_CMS750_4_4.sol  s_config16_CMS750_4_5.sol  s_config16_academictimetablesmall_1.sol  s_config16_academictimetablesmall_2.sol  s_config16_academictimetablesmall_3.sol  s_config16_academictimetablesmall_4.sol  s_config16_academictimetablesmall_5.sol  s_config16_air05_1.sol  s_config16_air05_2.sol  s_config16_air05_3.sol  s_config16_air05_4.sol  s_config16_air05_5.sol  s_config16_app1-1_1.sol  s_config16_app1-1_2.sol  s_config16_app1-1_3.sol  s_config16_app1-1_4.sol  s_config16_app1-1_5.sol  s_config16_app1-2_1.sol  s_config16_app1-2_2.sol  s_config16_app1-2_3.sol  s_config16_app1-2_4.sol  s_config16_app1-2_5.sol  s_config16_assign1-5-8_1.sol  s_config16_assign1-5-8_2.sol  s_config16_assign1-5-8_3.sol  s_config16_assign1-5-8_4.sol  s_config16_assign1-5-8_5.sol  (+11313 more)
src/: cpxmodel.cpp  feaspump.cpp  kernelpump.cpp  main.cpp  pdlpmodel.cpp  ranking.cpp  scipmodel.cpp  solution.cpp  transformers.cpp  xprsmodel.cpp
(+5477 files in other folders)
